# cl_glitcher

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: generate_version_info.cmake  stringify_to_header.cmake
examples/example-directory-structure/: global_env.json
examples/example-directory-structure/aglais_urticae/: env.json
examples/example-directory-structure/aglais_urticae/aglais_urticae_00/: aglais_urticae_00.json
include/cl_glitcher/cli/: cli.h
include/cl_glitcher/cmd_execution/: cmd_execution.h  cmd_execution_params.h  execute_cmd.h  mod_defs.h  system_environment.h
include/cl_glitcher/compute_kernels/opencl/image_util/: histogram.cl
include/cl_glitcher/compute_kernels/opencl/static_mods/: histogram_shift.cl  mandelbrot.cl  mandelbrot_shift.cl
include/cl_glitcher/gpu_programs/: histogram_array.h  histogram_program.h  sort_histogram.h
include/cl_glitcher/gpu_util/: buffer_wrapper.h  build_program.h  gpu_handle.h  gpu_headers.h  init.h  set_args.h
include/cl_glitcher/image_util/: histogram_program.h  load_image.h
include/cl_glitcher/json_defs/: json_obj_type.h  line_series.h
include/cl_glitcher/mod_environment/: environment_defaults.h  load_mod_environment.h  mod_environment.h
include/cl_glitcher/mod_sys/: dynamic_mod_data.h  load_dynamic_mods.h  load_mods.h  load_static_mods.h  mod_data.h  mod_data_interface.h  mod_defs.h  mod_sys.h  static_mod_data.h
include/cl_glitcher/static_mods/fractal_hist/: fractal_hist.h
include/cl_glitcher/static_mods/histogram_shift/: histogram_shift.h  histogram_shift_program.h
include/cl_glitcher/static_mods/mandelbrot/: mandelbrot.h  mandelbrot_program.h
include/cl_glitcher/static_mods/mandelbrot_shift/: mandelbrot_shift.h  mandelbrot_shift_program.h
include/cl_glitcher/version_info/: version_info.h
include/file_util/: append_number.h  load_file_to_string.h
include/generate_version_info/: generate_version_info.h
include/json_util/: file_read_stream.h  json_option.h  json_to_string.h  load_json_file.h  property.h
include/stringify_to_header/: stringify_to_header.h
src/cl_glitcher/: CMakeLists.txt  main.cpp
src/cl_glitcher/cli/: CMakeLists.txt  cli.cpp
src/cl_glitcher/cmd_execution/: CMakeLists.txt  cmd_execution.cpp  cmd_execution_params.cpp  execute_cmd.cpp  system_environment.cpp
src/cl_glitcher/gpu_programs/: CMakeLists.txt  histogram_program.cpp  sort_histogram.cpp
src/cl_glitcher/gpu_util/: CMakeLists.txt  buffer_wrapper.cpp  build_program.cpp  init.cpp
src/cl_glitcher/image_util/: CMakeLists.txt  histogram_program.cpp  load_image.cpp
src/cl_glitcher/mod_environment/: CMakeLists.txt  load_mod_environment.cpp  mod_environment.cpp
src/cl_glitcher/mod_sys/: CMakeLists.txt  load_dynamic_mods.cpp  load_mods.cpp  load_static_mods.cpp  mod_sys.cpp
src/cl_glitcher/static_mods/: CMakeLists.txt
src/cl_glitcher/static_mods/fractal_hist/: CMakeLists.txt  fractal_hist.cpp
src/cl_glitcher/static_mods/histogram_shift/: CMakeLists.txt  histogram_shift.cpp  histogram_shift_program.cpp
src/cl_glitcher/static_mods/mandelbrot/: CMakeLists.txt  mandelbrot.cpp  mandelbrot_program.cpp
src/cl_glitcher/static_mods/mandelbrot_shift/: CMakeLists.txt  mandelbrot_shift.cpp  mandelbrot_shift_program.cpp
src/file_util/: CMakeLists.txt  load_file_to_string.cpp
src/generate_version_info/: CMakeLists.txt  generate_version_info.cpp  main.cpp
src/json_util/: CMakeLists.txt  file_read_stream.cpp  load_json_file.cpp
src/stringify_to_header/: CMakeLists.txt  main.cpp  stringify_to_header.cpp
test/: CMakeLists.txt
test/cl_glitcher/: CMakeLists.txt
test/cl_glitcher/cli/: CMakeLists.txt  test_cl_glitcher_cli.cpp  test_cl_glitcher_cli_result.cpp
test/cl_glitcher/cmd_execution/: CMakeLists.txt  test_cl_glitcher_cmd_execution.cpp
test/cl_glitcher/cmd_execution/cmd1/: cmd1.json
test/cl_glitcher/cmd_execution/cmd2/: cmd2.json
test/cl_glitcher/cmd_execution/cmd3/: cmd3.json
test/cl_glitcher/gpu_programs/: CMakeLists.txt  test_cl_glitcher_gpu_programs.cpp
test/cl_glitcher/gpu_util/: CMakeLists.txt  test_cl_glitcher_gpu_util.cpp  test_cl_glitcher_vector_addition.cl  test_cl_glitcher_vector_addition.h
test/cl_glitcher/image_util/: CMakeLists.txt  gtest_cv_mat_wrapper.h  test_cl_glitcher_image_util.cpp
test/cl_glitcher/mod_environment/: CMakeLists.txt  test_cl_glitcher_mod_environment.cpp
test/cl_glitcher/mod_environment/mod_environment_0/: global_env.json
test/cl_glitcher/mod_environment/mod_environment_0/glitch_0/: env.json
test/cl_glitcher/mod_sys/: CMakeLists.txt  test_cl_glitcher_mod_sys.cpp  test_dynamic_mod_0.json
test/cl_glitcher/mod_sys/dynamic_mod_lib_1/: CMakeLists.txt  dynamic_mod_lib_1.cpp
test/cl_glitcher/static_mods/: CMakeLists.txt  test_cl_glitcher_static_mods_histogram_shift.cpp  test_cl_glitcher_static_mods_mandelbrot_shift.cpp
test/file_util/: CMakeLists.txt  test_append_number.cpp  test_load_file_to_string.cpp  test_load_file_to_string_1.txt
test/generate_version_info/: CMakeLists.txt  test_generate_version_info.cpp
test/json_util/: CMakeLists.txt  test_json_property.cpp  test_load_json_file.cpp
test/stringify_to_header/: CMakeLists.txt  pre_test_stringify_to_header.cpp  test_stringify_to_header.cpp  test_stringify_to_header_1.h  test_stringify_to_header_1.txt
